--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,9 +1,15 @@
 <ul>
   <% @movies.each do |movie| %>
     <li>
-    <strong><%= movie.name %></strong>
-    rating: <%= movie.rating %>
-    total gross: <%= number_to_currency(movie.total_gross, precision: 0) %>
+      <strong><%= movie.name %></strong>
+      rating: <%= movie.rating %>
+      total gross: <%= number_to_currency(movie.total_gross, precision: 0) %>
     </li>
+    <p>
+      <%= movie.description %>
+    </p>
+    <p>
+      <%= movie.released_on %>
+    </p>
   <% end %>
 </ul>
