--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,7 @@
 <% @movies.each do |movie| %>
   <section class="movie">
     <div class="summary">
-      <h2><%= movie.name %></h2>
+      <h2><%= link_to movie.name, movie %></h2>
       <%= movie.rating %>
       <h3><%= total_gross(movie) %></h3>
       <p>
